# next-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/images/: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
examples/images/src/: app.rs  main.rs  router.rs
examples/images/src/pages/: landing.rs
examples/links/: Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  tailwind.config.rs
examples/links/css/: tailwind.css
examples/links/src/: app.rs
examples/links/src/pages/: landing.rs  mod.rs
src/: head.rs  image.rs  lib.rs  link.rs  router.rs
