[package]
name = "next-rs"
version = "0.0.4"
description = "WIP: UI in Rust made simple."
license = "MIT"
keywords = ["next", "yew", "rust", "next-rs"]
repository = "https://github.com/next-rs/next-rs"
documentation = "https://docs.rs/next-rs"
homepage = "https://next-rs.dev"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"
exclude = ["/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = { version = "0.5.0", features = ["http"] }
input_yew = "0.1.10"
serde_json = "1.0.112"
stylist = { version = "0.13.0", features = ["yew_integration"] }
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3.67", features = ["Request", "Window", "ScrollToOptions", "ScrollBehavior"] }
yew = { version = "0.21.0", features = ["csr"], isolated = true }
yew-i18n = "0.1.1"
yew-navbar = "0.1.0"
yew-router = "0.18.0"
yew-sidebar = "0.1.0"

[package.metadata.docs.rs]
all-features = true

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
