[package]
name = "next-rs-links-example"
version = "0.1.0"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
next-rs = { path = "../.." }
yew = "0.21.0"
yew-router = "0.18.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
